--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
 	"dependencies": {
 		"dotenv": "^7.0.0",
 		"express": "^4.16.4",
-		"express-fileupload": "^1.1.1-alpha.3",
-		"shortid": "^2.2.14"
+		"express-fileupload": "^1.1.1-alpha.3"
 	}
 }
