--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-	"name": "image-uploader",
+	"name": "sharex-image-host",
 	"version": "1.0.0",
-	"description": "",
+	"description": "Minimal ShareX image host written in js using express and express-fileupload.",
+	"author": "developerrebel <cssherwood03@gmail.com> (https://github.com/developerrebel)",
+	"contributors": [
+		"Raven <raven@farfrom.earth> (farfrom.earth)",
+	],
 	"main": "src/main.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
+	"license": "MIT",
 	"dependencies": {
 		"dotenv": "^7.0.0",
 		"express": "^4.16.4",
